--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,6 @@
-@import url("./button.css");
 @import url("./layout.css");
+@import url("./typography.css");
+@import url("./button.css");
 @import url("./form.css");
 @import url("./navbar.css");
 @import url("./cards.css");
