--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -3,11 +3,12 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-bottom: 30px;
+    width: 100%;
 }
 
 .card {
     background-color: #fff;
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
