--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -4,10 +4,18 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
+    height: 100vh;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+.container-flex-row-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-flex-column-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
