--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 30px;
+    margin-bottom: 50px;
 }
 
 .navbar a {
