--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -1,7 +1,10 @@
 .table-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
